styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Helvetica, Arial;
}

body {
  background: #1a1d22;
  color: #f5f7fa;
}

.card, .user-block, .stars-block {
  box-shadow: 0 10px 30px rgba(0,0,0,0.35);
}

/* TOP */
.topbar {
  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  box-sizing: border-box;

  padding: 14px 16px;

 background: #1a1d22;
  border-color: rgba(255,255,255,0.06);
}

.tg-icon {
  width: 26px;
  height: 26px;
  display: block;
}

.support {
  display: flex;
  align-items: center;
}

/* SCREEN */
.screen {
  display: none;
  padding: 16px;
  padding-bottom: 90px;
}

.screen.active {
  display: block;
}

/* IMAGE */
.title-image img {
  width: 100%;
  max-width: 320px;
  margin: 0 auto;
  display: block;
  border-radius: 14px;
}

/* CARD */
.card,
.user-block,
.stars-block {
  background: #ffffff;
  border: 1px solid rgba(0,0,0,0.06);
  border-radius: 14px;
}

/* INPUT */
input {
  width: 100%;
  padding: 14px;
  border: none;
  background: #14171c;
  color: white;
  outline: none;
}

/* TOGGLE */
.toggle {
  display: flex;
}

.toggle button {
  flex: 1;
  padding: 12px;
  border: none;
  background: #1b1f26;
  color: #aaa;
}

.toggle .active {
  background: #2a2f38;
  color: white;
}

/* PACKS */
.packs {
  display: flex;
}

.packs button {
  flex: 1;
  height: 44px;

  display: flex;
  align-items: center;
  justify-content: center;
  gap: 6px;

  border: none;
  background: #1b1f26;
  color: #ffd36a;
  font-weight: 600;
}

.packs button img {
  width: 14px;
  height: 14px;
  flex-shrink: 0;
}

/* CALC */
.calc {
  display: flex;
  justify-content: space-between;
  margin: 14px 0;
  color: #888;
}

/* BUY */
.buy {
  width: 100%;
  padding: 14px;
  border: none;
  border-radius: 14px;
  background: #2a2f38;
  color: white;
  font-weight: 600;
}

/* TAB */
.tabbar {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;

  width: 100%;

  display: flex;

  padding: 10px;

   background: #1a1d22;
   border-color: rgba(255,255,255,0.06);
  box-sizing: border-box;
}

.tab {
  flex: 1;
  border: none;
  background: transparent;
  color: #777;
}

.tab.active {
  color: #ffd36a;
}
body {
  overflow-x: hidden;
}
.title-image {
  margin-bottom: 18px;
}

.user-block {
  margin-top: 14px;
}
* {
  box-sizing: border-box;
}

